widgets.less: Fix squished health view
refs #112

--- a/public/css/widgets.less
+++ b/public/css/widgets.less
@@ -842,6 +842,10 @@ form.object-features {
     justify-content: space-around;
   }
 
+  .icinga-info .vertical-key-value {
+    margin-bottom: 2em;
+  }
+
   .col {
     flex: 1 1 auto;
     text-align: center;
